* Updated permissions * Reduced interval between site checking * Fixed problem with a loading bar that couldn't finish loading for too long + Replaced loading bar with image fading

--- a/speeddial.css
+++ b/speeddial.css
@@ -1,13 +1,22 @@
 body {
+	height: 100%;
+	margin: 0;
+}
+
+.background {
+	position:        absolute;
+	width:           100%;
+	height:          100%;
 	background-size: cover;
 }
 
-#loading {
-	position:     absolute;
-	top:          50%;
-	left:         50%;
-	width:        30px;
-	height:       30px;
-	margin-left: -15px;
-	margin-top:  -15px;
+#backBackground {
+	background-image: url("img/white.gif");
+}
+
+.fadeable {
+	-webkit-transition: opacity 1s ease-in-out;
+	   -moz-transition: opacity 1s ease-in-out;
+	     -o-transition: opacity 1s ease-in-out;
+	        transition: opacity 1s ease-in-out;
 }
